<!--
  ~    Copyright [2019] [chengjie.jlu@qq.com]
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">知乎</string>
    <string name="search_in_zhihu">搜索知乎内容</string>
    <string name="slogan">发现更大的世界</string>
    <string name="login">登陆</string>
    <string name="login_more">登陆知乎发现更多内容</string>
    <string name="auto_register">未注册账号自动注册</string>
    <string name="email_address">邮件地址</string>
    <string name="input_password">输入密码</string>

    <string name="tab_home">首页</string>
    <string name="tab_question">问题</string>
    <string name="tab_article">文章</string>
    <string name="tab_idea">想法</string>
    <string name="tab_my">我的</string>

    <string name="more">更多</string>

    <string name="switch_image">更换头像</string>
    <string name="sign">个性签名</string>
    <string name="logout">退出登陆</string>

    <string name="about_zhihu">关于知乎</string>
    <string name="support">帮助支持</string>
    <string name="social_login">社交账号登陆</string>
    <string name="liu_kan_shan">知乎刘看山</string>
    <string name="fans">粉丝 25</string>
    <string name="follow">关注 25</string>
    <string name="agree">赞同 215</string>
    <string name="collect">收藏 25</string>
    <string name="answers">我的回答</string>
    <string name="question">我的提问</string>
    <string name="articles">我的文章</string>
    <string name="accounts">账号与安全</string>
    <string name="name">昵称</string>
    <string name="phone">手机号码</string>
    <string name="email">邮箱</string>
    <string name="modify_pwd">修改账号密码</string>
    <string name="social_accounts_bind">社交账号绑定</string>
    <string name="qq">QQ账号</string>
    <string name="qq_name">医我一生</string>
    <string name="wechat">微信账号</string>
    <string name="un_bind">未绑定</string>
    <string name="weibo">新浪微博</string>
    <string name="notify">消息与通知</string>
    <string name="news">热点资讯</string>
    <string name="agree_and_collect">点赞与收藏</string>
    <string name="comment_and_reply">评论与回复</string>
    <string name="follow_people">关注人动态</string>
    <string name="check_update">检查更新</string>
    <string name="copyright">©Copyright chengjie.jlu@qq.com</string>
    <string name="register">注册知乎账号</string>
    <string name="input_name">输入昵称</string>
    <string name="submit_an_article">发表了文章</string>
    <string name="answer_a_question">回答了问题</string>
    <string name="comment">评论</string>
</resources>
